# qmulti

./: Cargo.toml  Cross.toml  LICENSE-MIT  README.md  avahi-wrapper.h  build.rs  dnssd-wrapper.h
examples/browse/: Cargo.toml
examples/browse/src/: main.rs
examples/register/: Cargo.toml
examples/register/src/: main.rs
qmulti-test/: Cargo.toml
qmulti-test/src/: main.rs
src/: lib.rs  util.rs
src/avahi/: bindings.rs  mod.rs  register.rs
src/bonjour/: bindings.rs  browse.rs  mod.rs  register.rs  resolve.rs
