[package]
name = "qmulti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]


[dependencies]
async-trait = "0.1.74"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[target.'cfg(any(zeroconf_impl = "bonjour", target_vendor = "apple", windows))'.dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.68"